--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -72,6 +72,13 @@
 	margin-top: 6%;
 }
 
+.Modal .Modal-Content > *,
+.Modal .Modal-Full-Content > * {
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 760px;
+}
+
 /********************************* */
 /** Media Queries                  *
 /********************************* */
@@ -81,7 +88,27 @@
 	.Modal .Modal-Content {
 		margin-top: 20%;
 	}
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+	.Modal .Modal-Content {
+		margin-top: 10%;
+	}
+
+	.Modal .Modal-Full-Content {
+		margin-top: 2%;
+	}
+
+	.Modal {
+		left: 26vw;
+	}
+
 	.AssignmentForm {
 		margin-top: 0;
+	}
+
+	.Modal-Close {
+		top: 2rem;
 	}
 }
