styled User Profile Page to display data with chips component

--- a/src/pages/UserProfile/UserProfile.css
+++ b/src/pages/UserProfile/UserProfile.css
@@ -93,6 +93,20 @@
 	margin-left: 0.5rem;
 }
 
+.UserProfile
+	.UserProfile__Body
+	.UserProfile__Body-Field
+	.UserProfile__Body-Input
+	> .keywords,
+.UserProfile
+	.UserProfile__Body
+	.UserProfile__Body-Field
+	.UserProfile__Body-Input
+	> .courses {
+	display: flex;
+	margin-bottom: 0;
+}
+
 .User-Availability-List > li {
 	display: flex;
 	justify-content: space-between;
