fixed collection typo "class" to "courses" and re-styled Assignment Cards

--- a/src/components/CourseAssignments/styles/AssignmentForm.css
+++ b/src/components/CourseAssignments/styles/AssignmentForm.css
@@ -50,3 +50,10 @@
 	background-color: var(--bg-color);
 	border: 1px solid var(--tertiary-color);
 }
+
+/**************************************/
+/** Error Messages                    */
+/**************************************/
+.AssignmentForm > .alert.errors {
+	margin-top: 5rem;
+}
