--- a/src/components/layout/NavBar/NavBar.css
+++ b/src/components/layout/NavBar/NavBar.css
@@ -12,6 +12,10 @@
 	width: 100%;
 }
 
+.NavBar h5 {
+	margin-bottom: 0;
+}
+
 .nav-item {
 	margin-top: auto;
 	margin-bottom: auto;
@@ -49,7 +53,8 @@ a.nav-link:hover {
 a.nav-link:active,
 a.nav-link:link,
 a.nav-link:visited,
-a.nav-link:focus {
+a.nav-link:focus,
+.nav-item.nav-avatar > a:hover {
 	background-color: var(--bg-color);
 }
 
