--- a/src/App.css
+++ b/src/App.css
@@ -470,6 +470,13 @@ li .MuiChip-root svg:hover {
 	.StudyGroups__Header {
 		padding-top: 1rem;
 		height: 16vh;
+		max-height: 8rem;
+	}
+
+	.PostInfo__Header.Body-Header,
+	.Courses-Header,
+	.Tutors-Header {
+		max-height: 4rem;
 	}
 
 	.Notifications__Header,
@@ -512,9 +519,12 @@ li .MuiChip-root svg:hover {
 	}
 
 	.StudyGroupChat__Body.Page__Body,
-	.CourseInfo__Body,
-	.Tutors__Body {
+	.CourseInfo__Body {
 		margin-top: 4rem;
+	}
+
+	.Tutors__Body {
+		margin-top: 5rem;
 	}
 
 	.Courses__CourseList,
@@ -603,6 +613,11 @@ li .MuiChip-root svg:hover {
 		margin-left: 12rem;
 	}
 
+	.Find-Tutors,
+	.BeTutorForm {
+		margin-top: 0;
+	}
+
 	/* Admin Buttons for Message Chat and Study Group Chat */
 	.MessageChat__Header > button.MuiButtonBase-root.MuiIconButton-root,
 	.StudyGroupChat__Header > button.MuiButtonBase-root.MuiIconButton-root {
@@ -667,6 +682,12 @@ li .MuiChip-root svg:hover {
 
 	.MessageChat__Header {
 		margin-top: 0.2rem;
+	}
+
+	.Feed-Header,
+	.MessageChat__Header,
+	.Notifications__Header {
+		max-height: 4rem;
 	}
 
 	.MessageChat__Body {
