--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -128,6 +128,15 @@
 	-ms-animation: fadeInLogin ease 2.5s;
 }
 
+.Login__Footer > p {
+	font-size: 12px;
+	color: lightgray;
+}
+
+.Login__Footer > p a {
+	color: var(--primary-color);
+}
+
 @keyframes fadeInLogin {
 	0% {
 		opacity: 0;
